# cookiecutter-fastapi

./: LICENSE  README.MD  cookiecutter.json
{{cookiecutter.project_name}}/: Dockerfile  LICENSE  Makefile  README.MD  app.py  docker-compose.yml  lint.sh  main.py  pyproject.toml
{{cookiecutter.project_name}}/api/: __init__.py  health.py  root.py
{{cookiecutter.project_name}}/api/admin/: __init__.py  admin.py  auth.py  user.py
{{cookiecutter.project_name}}/api/v1/: __init__.py
{{cookiecutter.project_name}}/api/v1/auth/: __init__.py  base.py  deps.py  endpoints.py  utils.py
{{cookiecutter.project_name}}/core/: __init__.py  config.py  db_client.py  exceptions.py  logging.py  redis_client.py  utils.py
{{cookiecutter.project_name}}/core/middleware/: __init__.py  catch_exceptions_middleware.py  logging_middleware.py
{{cookiecutter.project_name}}/migrations/: env.py
{{cookiecutter.project_name}}/migrations/versions/: 2023-06-11-20-09_b95e30d8fd74.py
{{cookiecutter.project_name}}/models/: __init__.py  base.py  user.py
{{cookiecutter.project_name}}/schemas/: __init__.py  base_model.py  error_response.py  health_response.py  json_logs.py  user.py
{{cookiecutter.project_name}}/templates/: root.html
