[tool.poetry]
name = "frogg"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.98.0"
fastapi-health = "^0.4.0"
fastapi-pagination = "^0.12.4"
fastapi-users = "^11.0.0"
sqladmin = "^0.12.0"
asyncpg = "^0.27.0"
sqlalchemy = "^2.0.17"
uvicorn = "^0.22.0"
gunicorn = "^20.1.0"
alembic = "^1.11.1"
fastapi-users-db-sqlalchemy = "^5.0.0"
starlette-context = "^0.3.6"
orjson = "^3.9.1"
redis = "^4.6.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
autopep8 = "^2.0.0"
ipdb = "^0.13.0"
pylint = "^2.15.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
